[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-verigent"
version = "0.1.0"
description = "Verigent trust verification for LangChain agents, chains, and tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "verigentai", email = "dev@verigent.ai" },
]
keywords = ["langchain", "verigent", "trust", "agents", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=0.2.0",
]

[project.optional-dependencies]
verify = ["httpx>=0.25.0"]

[project.urls]
Homepage = "https://verigent.ai"
Repository = "https://github.com/verigentai/langchain-verigent"
